src/css/OptimizerApp.css
.OptimizerApp {
  padding: 10px;
}

.options-container {
  margin-bottom: 10px
}

.import-from-csv-container,
.choose-each-once-container,
.run-optimizer-container,
.export-options-label,
.loading-icon-container {
  display: inline-block;
  vertical-align: super;
  margin-left: 10px;
}

.exporter-container,
.export-options-dropdown-container {
  display: inline-block;
  margin-left: 10px;
}

.Dropdown-root {
  width: 160px;
}

.Dropdown-control {
  padding: 4px 40px 4px 8px;
}

.data-grid {
  display: inline-block;
  border-collapse: collapse;
}

tbody:before,
tbody:after {
  line-height: 1em;
  content: "\200C";
  display:block;
}

.cell {
  width: 130px;
  height: 25px;
  padding: 0px;
}

.input-cell {
  border-style: solid;
  border-width: 1px;
}

.cell-contents-container {
  margin-left: 1px;
  height: 86%;
}

.cell-contents {
  height: 100%;
  padding-left: 5px;
}

.immutable-cell-contents {
  font-size: larger;
}

.input-cell-contents {
  border: none;
  font-size: medium;
}

.spacing-cell {
  width: 16px;
}

.add-choice {
  display: inline-block;
  vertical-align: top;
  margin-left: 15px;
}

.choicesPerName-cell {
  margin-left: 10px;
}

.add-name {
  display: block;
  margin-top: 5px;
}

.slack-container {
  display: inline-block;
  margin-left: -55px;
  font-size: x-small;
}

